test/error/iocheck/err5.rzy
// Error: response is not allowed to output

Err5 = Component
  event : signal();
  what : response():R{0,100};

elementary
  bar = procedure()
    event();
  end
  
  foo = procedure()
    bar();
  end
  
  what : response():R{0,100}
    foo();
    return 0;
  end
  
end

